# danton

./: .bumpversion.cfg  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  Cargo.toml  MANIFEST.in  Makefile  README.md  build.rs  pyproject.toml  setup.sh
.github/workflows/: appimage.yml  build.yml
cards/: backward-tau-decays.json  grammage.json
danton/: __init__.py
danton/data/cs/: BGR18.txt
danton/data/materials/dedx/: air.txt
docs/source/: conf.py  coordinates.rst  geometry.rst  index.rst  interface.rst  materials.rst  montecarlo.rst  physics.rst  references.rst  requirements.txt
docs/source/interface/: BGR18.txt
docs/source/materials/: default.toml  rocks.toml
docs/source/montecarlo/: generator.py  point-estimate.py
examples/: backward-box.py  backward-ecef.py  backward.py  forward-box.py  forward-ecef.py  forward.py  generator.py  grammage.py  materials.py  point-estimate.py  rocks.toml  undulations.py
examples/cards/: backward-tau-decays.json  forward-tau-decays.json  grammage.json
include/: danton.h
include/danton/primary/: discrete.h  powerlaw.h
include/danton/recorder/: text.h
lib/python/: danton.py
materials/: materials.xml
materials/dedx/: air.txt  air_dry_1_atm.txt  rock.txt  standard_rock.txt  water.txt
share/cards/: backward-tau-decays.json  forward-tau-decays.json  grammage.json
share/danton/cs/: CSMS.txt
share/danton/materials/dedx/: water.txt
share/materials/: materials.xml
share/materials/dedx/: air.txt  rock.txt
src/: bindings.rs  danton-x.c  danton.c  danton.h  lib.rs  simulation.rs  tau-yield.c  utils.rs
src/bindings/: alouette.rs  danton.rs  ent.rs  pumas.rs  turtle.rs
src/danton/primary/: discrete.c  powerlaw.c
src/danton/recorder/: text.c
src/python/danton/: __init__.py  __main__.py
src/python/danton/data/cs/: BGR18.txt  CMS11.txt
src/python/danton/data/materials/: default.toml
src/simulation/: geobox.rs  geometry.rs  materials.rs  particles.rs  physics.rs  primary.rs  random.rs  recorder.rs  sampler.rs  stepper.rs
src/utils/: cache.rs  convert.rs  coordinates.rs  error.rs  export.rs  extract.rs  float.rs  io.rs  namespace.rs  numpy.rs  tuple.rs
src/utils/convert/: array.rs  geodesic.rs  geodesy.rs  materials.rs  mdf.rs  medium.rs  mode.rs  physics.rs  state.rs  toml.rs
src/utils/convert/physics/: bremsstrahlung.rs  dis.rs  pair_production.rs  pdf.rs  photonuclear.rs
tests/: histogram.py  merge.py  paper.mplstyle  plot-area.py  plot-decays.py  plot-flux.py  run-area.py  run-decays.py  run-flux.py
