[package]
name = "danton"
version = "1.0.1"
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
derive_more = "0.99"
enum-variants-strings = "0.3"
libc = "0.2"
process_path = "0.1"
pyo3 = { version = "0.21", features = ["abi3", "extension-module"] }
temp-dir = "0.1"

[build-dependencies]
cc = "1.1"

[lib]
name = "danton"
crate-type = ["lib", "cdylib"]

[profile.release-with-debug]
inherits = "release"
debug = true
