[package]
name = "danton"
version = "1.4.4"
edition = "2021"
license = "LGPL-3.0-only"

[dependencies]
console = "0.15"
derive_more = "0.99"
enum-variants-strings = "0.3"
getrandom = "0.2"
indicatif = "0.17"
libc = "0.2"
process_path = "0.1"
pyo3 = { version = "0.21", features = ["abi3", "extension-module"] }
rand = "0.8"
rand_pcg = "0.3"
regex = "1.10"
temp-dir = "0.1"

[build-dependencies]
cc = "1.1"

[lib]
name = "danton"
crate-type = ["lib", "cdylib"]

[profile.release-with-debug]
inherits = "release"
debug = true
