[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "danton"
authors = [
    {name = "Valentin Niess", email = "valentin.niess@gmail.com"}
]
description = "DecAyiNg Taus frOm Neutrinos (Danton)."
readme = "README.md"
license = {text = "LGPLv3"}
keywords = ["neutrino", "tau", "Monte Carlo", "backward"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
version = "1.2.0"
requires-python = ">=3.7.0"
dependencies = [
    "numpy >= 1.6.0",
]

[project.scripts]
danton = "danton.__main__:danton"

[project.urls]
source = "https://github.com/niess/danton"

[tool.setuptools.packages.find]
where = ["src/python"]

[[tool.setuptools-rust.ext-modules]]
target = "danton.danton"

# Build options for Python wheels.
[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs -o rustup.sh ; sh rustup.sh -y"
build = "cp37-manylinux_x86_64"
environment = "PATH=$HOME/.cargo/bin:$PATH"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
build = "cp37-macosx_x86_64"
